fix overflow issue on iphone

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@
   }
 }
 @media screen and (max-width:768px){
-  body{
+  html,body{
     overflow-x: hidden;
   }
   .nav-links{
@@ -76,6 +76,7 @@
     transform: translateX(100%);
     transition: transform 0.5s ease-in;
     z-index: 1;
+    
     
   }
   .nav-active li{
